fix: app crashed - vaccine details

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -236,6 +236,7 @@
 
     <style name="vaccineInfoHeadlinesDetails">
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:minWidth">400dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_margin">20dp</item>
