--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,7 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:elevation="16dp"
+        android:visibility="visible"
         app:queryHint="@string/search"
+        android:imeOptions="actionSearch"
+        android:inputType="textAutoComplete|textAutoCorrect"
+        android:layout_weight="1"
         android:background="@drawable/search_view_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
