--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="lightBlue">#66cccc</color>
     <color name="lightGreen">#D23F34</color>
     <color name="red">#E46C62</color>
-
+    <color name="developerCardColor">#BAC7D8</color>
 </resources>
