--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -241,4 +241,51 @@
         <item name="android:textSize">16sp</item>
         <item name="android:layout_margin">20dp</item>
     </style>
+
+
+    <style name="circularAvatar">
+        <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="developerImage">
+        <item name="android:layout_width">70dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="developerInfo">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="developerInfo.name">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="developerInfo.role">
+        <item name="android:textColor">@color/red</item>
+        <item name="layout_constraintVertical_bias">0.65</item>
+    </style>
+
+    <style name="developerCard">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">140dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="cardCornerRadius">16dp</item>
+        <item name="cardElevation">4dp</item>
+        <item name="android:backgroundTint">@color/developerCardColor</item>
+    </style>
+
+    <style name="developerCard.magrinStart">
+        <item name="android:layout_marginStart">10dp</item>
+    </style>
+
+    <style name="developerCard.marginEnd">
+        <item name="android:layout_marginEnd">10dp</item>
+    </style>
+
 </resources>
