--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -248,11 +248,12 @@
     </style>
 
     <style name="developerImage">
-        <item name="android:layout_width">70dp</item>
-        <item name="android:layout_height">70dp</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:elevation">4dp</item>
+        <item name="android:layout_width">65dp</item>
+        <item name="android:layout_height">65dp</item>
+        <item name="android:elevation">8dp</item>
         <item name="android:scaleType">centerCrop</item>
+        <item name="layout_constraintVertical_bias">0.25</item>
+        <item name="layout_constraintHorizontal_bias">0.5</item>
     </style>
 
     <style name="developerInfo">
@@ -262,13 +263,16 @@
         <item name="android:textStyle">bold</item>
     </style>
     <style name="developerInfo.name">
+        <item name="android:layout_marginBottom">16dp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
     <style name="developerInfo.role">
+        <item name="android:layout_marginBottom">16dp</item>
         <item name="android:textColor">@color/red</item>
-        <item name="layout_constraintVertical_bias">0.65</item>
+        <item name="android:textSize">11.5sp</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="developerCard">
@@ -281,11 +285,11 @@
     </style>
 
     <style name="developerCard.magrinStart">
-        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginStart">16dp</item>
     </style>
 
     <style name="developerCard.marginEnd">
-        <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
     </style>
 
 </resources>
