--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/brandColor"/>
+    <item android:drawable="@color/secondaryBrandColor"/>
 
     <item android:drawable="@drawable/ic_application_logo" android:gravity="center"/>
 
