fix: app icon not found

--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -3,6 +3,9 @@
 
     <item android:drawable="@color/secondaryBrandColor"/>
 
-    <item android:drawable="@drawable/ic_application_logo" android:gravity="center"/>
+    <item android:drawable="@drawable/ic_application_logo"
+        android:height="120dp"
+        android:width="160dp"
+        android:gravity="center"/>
 
 </layer-list>
