--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -8,258 +8,139 @@
     tools:context=".ui.fragments.AboutFragment">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/about_guideline1"
+        android:id="@+id/about_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.48"/>
+        app:layout_constraintGuide_percent="0.6"
+        android:orientation="horizontal"/>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/about_guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.52"/>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/upper_card"
+    <ImageView
+        android:id="@+id/about_image"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:layout_margin="16dp"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="16dp"
+        android:layout_height="270dp"
+        android:padding="16dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/team"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/about_headline"
+        style="@style/aboutHeadlineText"
+        android:text="@string/about_headline_text"
+        android:layout_marginTop="12dp"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_image" />
+
+    <TextView
+        android:id="@+id/team_description"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:elevation="8dp"
-        android:text="@string/about_upper_card_text"
-        android:textColor="@color/black"
-        android:textSize="13.5sp"
+        android:text="@string/team_description_text"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/aboutDescriptionText"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/upper_card"
-        app:layout_constraintEnd_toEndOf="@+id/upper_card"
-        app:layout_constraintStart_toStartOf="@+id/upper_card"
-        app:layout_constraintTop_toTopOf="@+id/upper_card" />
-
-    <!-- Bareq Info-->
-    <androidx.cardview.widget.CardView
-        style="@style/developerCard.magrinStart"
-        android:id="@+id/bareq_altaamah"
-        app:layout_constraintEnd_toStartOf="@+id/about_guideline1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/upper_card" />
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/bareq_avatar"
-        style="@style/developerImage"
-        android:src="@drawable/male_one"
-        app:layout_constraintBottom_toBottomOf="@+id/bareq_altaamah"
-        app:layout_constraintEnd_toEndOf="@+id/bareq_altaamah"
-        app:layout_constraintStart_toStartOf="@+id/bareq_altaamah"
-        app:layout_constraintTop_toTopOf="@+id/bareq_altaamah"
-        app:shapeAppearanceOverlay="@style/circularAvatar" />
-
-    <TextView
-        android:id="@+id/bareq_name"
-        style="@style/developerInfo.name"
-        android:text="@string/bareq_al_taamah"
-        app:layout_constraintBottom_toBottomOf="@+id/bareq_altaamah"
-        app:layout_constraintEnd_toEndOf="@+id/bareq_altaamah"
-        app:layout_constraintStart_toStartOf="@+id/bareq_altaamah"
-        app:layout_constraintTop_toBottomOf="@+id/bareq_avatar" />
-
-    <TextView
-        style="@style/developerInfo.role"
-        android:text="@string/instructor"
-        app:layout_constraintBottom_toBottomOf="@+id/bareq_altaamah"
-        app:layout_constraintEnd_toEndOf="@+id/bareq_altaamah"
-        app:layout_constraintStart_toStartOf="@+id/bareq_altaamah"
-        app:layout_constraintTop_toBottomOf="@+id/bareq_name" />
-
-    <!--Ahmed Info-->
-    <androidx.cardview.widget.CardView
-        style="@style/developerCard.marginEnd"
-        android:id="@+id/ahmed_mones"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/about_guideline2"
-        app:layout_constraintTop_toBottomOf="@id/upper_card"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/about_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/about_headline" />
 
-    <com.google.android.material.imageview.ShapeableImageView
-        style="@style/developerImage"
-        android:id="@+id/ahmed_avatar"
-        android:src="@drawable/male_two"
-        app:layout_constraintBottom_toBottomOf="@+id/ahmed_mones"
-        app:layout_constraintEnd_toEndOf="@+id/ahmed_mones"
-        app:layout_constraintStart_toStartOf="@+id/ahmed_mones"
-        app:layout_constraintTop_toTopOf="@+id/ahmed_mones"
-        app:shapeAppearanceOverlay="@style/circularAvatar" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="16dp"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="12dp"
+        app:cardBackgroundColor="@color/namesCardColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        style="@style/aboutHeadlineText"
+        android:id="@+id/team_leader"
+        android:elevation="8.5dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/team_leader"
+        android:textSize="24sp"
+        app:layout_constraintVertical_bias="0.03"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/ahmed_name"
-        style="@style/developerInfo.name"
+        style="@style/aboutNamesText"
         android:text="@string/ahmed_mones"
-        app:layout_constraintBottom_toBottomOf="@+id/ahmed_mones"
-        app:layout_constraintEnd_toEndOf="@+id/ahmed_mones"
-        app:layout_constraintStart_toStartOf="@+id/ahmed_mones"
-        app:layout_constraintTop_toBottomOf="@+id/ahmed_avatar" />
-
-    <TextView
-        style="@style/developerInfo.role"
-        android:text="@string/team_leader"
-        app:layout_constraintBottom_toBottomOf="@+id/ahmed_mones"
-        app:layout_constraintEnd_toEndOf="@+id/ahmed_mones"
-        app:layout_constraintStart_toStartOf="@+id/ahmed_mones"
-        app:layout_constraintTop_toBottomOf="@+id/ahmed_name" />
-
-
-    <!--Zahraa Info-->
-    <androidx.cardview.widget.CardView
-        style="@style/developerCard.magrinStart"
-        android:id="@+id/zahraa_zahir"
-        app:layout_constraintEnd_toEndOf="@id/about_guideline1"
+        app:layout_constraintVertical_bias="0.20"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bareq_altaamah"/>
-
-    <com.google.android.material.imageview.ShapeableImageView
-        style="@style/developerImage"
-        android:id="@+id/zahraa_avatar"
-        android:src="@drawable/female_one"
-        app:layout_constraintBottom_toBottomOf="@+id/zahraa_zahir"
-        app:layout_constraintStart_toStartOf="@+id/zahraa_zahir"
-        app:layout_constraintTop_toTopOf="@+id/zahraa_zahir"
-        app:layout_constraintEnd_toEndOf="@id/zahraa_zahir"
-        app:shapeAppearanceOverlay="@style/circularAvatar" />
-
-
-    <TextView
-        android:id="@+id/zahraa_name"
-        style="@style/developerInfo.name"
-        android:text="@string/zahraa_zahir"
-        app:layout_constraintBottom_toBottomOf="@+id/zahraa_zahir"
-        app:layout_constraintEnd_toEndOf="@+id/zahraa_zahir"
-        app:layout_constraintStart_toStartOf="@+id/zahraa_zahir"
-        app:layout_constraintTop_toBottomOf="@+id/zahraa_avatar" />
-
-    <TextView
-        style="@style/developerInfo.role"
-        android:text="@string/team_member"
-        app:layout_constraintBottom_toBottomOf="@+id/zahraa_zahir"
-        app:layout_constraintEnd_toEndOf="@+id/zahraa_zahir"
-        app:layout_constraintStart_toStartOf="@id/zahraa_zahir"
-        app:layout_constraintTop_toBottomOf="@+id/zahraa_name" />
-
-
-
-    <!--Ammar Info-->
-    <androidx.cardview.widget.CardView
-        style="@style/developerCard.marginEnd"
-        android:id="@+id/ammar_thaaer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/about_guideline2"
-        app:layout_constraintTop_toBottomOf="@id/ahmed_mones"/>
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ammar_avatar"
-        style="@style/developerImage"
-        android:src="@drawable/male_one"
-        app:layout_constraintBottom_toBottomOf="@+id/ammar_thaaer"
-        app:layout_constraintEnd_toEndOf="@+id/ammar_thaaer"
-        app:layout_constraintStart_toStartOf="@+id/ammar_thaaer"
-        app:layout_constraintTop_toTopOf="@+id/ammar_thaaer"
-        app:shapeAppearanceOverlay="@style/circularAvatar" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
+        style="@style/aboutHeadlineText"
+        android:id="@+id/team_member"
+        android:text="@string/team_member"
+        android:elevation="8.5dp"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+
+    <TextView
+        style="@style/aboutNamesText"
         android:id="@+id/ammar_name"
-        style="@style/developerInfo.name"
         android:text="@string/ammar_thaaer"
-        app:layout_constraintBottom_toBottomOf="@+id/ammar_thaaer"
-        app:layout_constraintEnd_toEndOf="@+id/ammar_thaaer"
-        app:layout_constraintStart_toStartOf="@+id/ammar_thaaer"
-        app:layout_constraintTop_toBottomOf="@+id/ammar_avatar" />
-
-    <TextView
-        style="@style/developerInfo.role"
-        android:text="@string/team_member"
-        app:layout_constraintBottom_toBottomOf="@+id/ammar_thaaer"
-        app:layout_constraintEnd_toEndOf="@+id/ammar_thaaer"
-        app:layout_constraintStart_toStartOf="@+id/ammar_thaaer"
-        app:layout_constraintTop_toBottomOf="@+id/ammar_name"/>
-
-
-    <!--Zainab Info-->
-    <androidx.cardview.widget.CardView
-        style="@style/developerCard.magrinStart"
-        android:id="@+id/zainab_mahmood"
-        app:layout_constraintEnd_toEndOf="@id/about_guideline1"
+        app:layout_constraintVertical_bias="0.45"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/zahraa_zahir"/>
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/zainab_avatar"
-        style="@style/developerImage"
-        android:src="@drawable/female_two"
-        app:layout_constraintBottom_toBottomOf="@+id/zainab_mahmood"
-        app:layout_constraintEnd_toStartOf="@+id/about_guideline1"
-        app:layout_constraintStart_toStartOf="@+id/zainab_mahmood"
-        app:layout_constraintTop_toTopOf="@+id/zainab_mahmood"
-        app:shapeAppearanceOverlay="@style/circularAvatar" />
-
-    <TextView
-        android:id="@+id/zainab_name"
-        style="@style/developerInfo.name"
-        android:text="@string/zainab_mahmood"
-        app:layout_constraintBottom_toBottomOf="@+id/zainab_mahmood"
-        app:layout_constraintEnd_toEndOf="@+id/zainab_mahmood"
-        app:layout_constraintStart_toStartOf="@+id/zainab_mahmood"
-        app:layout_constraintTop_toBottomOf="@+id/zainab_avatar" />
-
-    <TextView
-        style="@style/developerInfo.role"
-        android:text="@string/team_member"
-        app:layout_constraintBottom_toBottomOf="@+id/zainab_mahmood"
-        app:layout_constraintEnd_toEndOf="@+id/zainab_mahmood"
-        app:layout_constraintStart_toStartOf="@+id/zainab_mahmood"
-        app:layout_constraintTop_toBottomOf="@+id/zainab_name" />
-
-
-    <!--Karrar Info-->
-    <androidx.cardview.widget.CardView
-        style="@style/developerCard.marginEnd"
-        android:id="@+id/karrar_mohammed"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/about_guideline2"
-        app:layout_constraintTop_toBottomOf="@id/ammar_thaaer"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/karrar_avatar"
-        style="@style/developerImage"
-        android:src="@drawable/male_two"
-        app:layout_constraintBottom_toBottomOf="@+id/karrar_mohammed"
-        app:layout_constraintEnd_toEndOf="@+id/karrar_mohammed"
-        app:layout_constraintStart_toStartOf="@+id/karrar_mohammed"
-        app:layout_constraintTop_toTopOf="@+id/karrar_mohammed"
-        app:shapeAppearanceOverlay="@style/circularAvatar" />
 
     <TextView
+        style="@style/aboutNamesText"
+        android:id="@+id/zainab_name"
+        android:text="@string/zainab_mahmood"
+        app:layout_constraintVertical_bias="0.55"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+    <TextView
+        style="@style/aboutNamesText"
         android:id="@+id/karrar_name"
-        style="@style/developerInfo.name"
         android:text="@string/karrar_mohammed"
-        app:layout_constraintBottom_toBottomOf="@+id/karrar_mohammed"
-        app:layout_constraintEnd_toEndOf="@+id/karrar_mohammed"
-        app:layout_constraintStart_toStartOf="@+id/karrar_mohammed"
-        app:layout_constraintTop_toBottomOf="@+id/karrar_avatar" />
+        app:layout_constraintVertical_bias="0.65"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-        style="@style/developerInfo.role"
-        android:text="@string/team_member"
-        app:layout_constraintBottom_toBottomOf="@+id/karrar_mohammed"
-        app:layout_constraintEnd_toEndOf="@+id/karrar_mohammed"
-        app:layout_constraintStart_toStartOf="@+id/karrar_mohammed"
-        app:layout_constraintTop_toBottomOf="@+id/karrar_name" />
+        style="@style/aboutNamesText"
+        android:id="@+id/zahraa_name"
+        android:text="@string/zahraa_zahir"
+        app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintTop_toBottomOf="@+id/about_guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
