--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -283,60 +283,30 @@
         <item name="android:layout_margin">20dp</item>
     </style>
 
-
-    <style name="circularAvatar">
-        <item name="cornerSize">50%</item>
-    </style>
-
-    <style name="developerImage">
-        <item name="android:layout_width">65dp</item>
-        <item name="android:layout_height">65dp</item>
-        <item name="android:elevation">8dp</item>
-        <item name="android:scaleType">centerCrop</item>
-        <item name="layout_constraintVertical_bias">0.25</item>
-        <item name="layout_constraintHorizontal_bias">0.5</item>
-    </style>
-
-    <style name="developerInfo">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:elevation">4dp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="developerInfo.name">
-        <item name="android:layout_marginBottom">16dp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">13sp</item>
-    </style>
-
-    <style name="developerInfo.role">
-        <item name="android:layout_marginBottom">16dp</item>
-        <item name="android:textColor">@color/red</item>
-        <item name="android:textSize">11.5sp</item>
-        <item name="android:textStyle">normal</item>
-    </style>
-
-    <style name="developerCard">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">140dp</item>
-        <item name="android:layout_marginTop">16dp</item>
-        <item name="cardCornerRadius">16dp</item>
-        <item name="cardElevation">4dp</item>
-        <item name="android:backgroundTint">@color/developerCardColor</item>
-    </style>
-
-    <style name="developerCard.magrinStart">
-        <item name="android:layout_marginStart">16dp</item>
-    </style>
-
-    <style name="developerCard.marginEnd">
-        <item name="android:layout_marginEnd">16dp</item>
-    </style>
     <!-- Round picture -->
     <style name="circleImageStyle">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+
+    <!-- About Fragment Styles -->
+
+    <style name="aboutHeadlineText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="aboutNamesText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:elevation">8.5dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_marginTop">12dp</item>
     </style>
 
 </resources>
